<resources>
    <string name="app_name">Song Saver</string>
    <string name="stars">Stars</string>
    <string name="year">Year</string>
    <string name="singers">Singers</string>
    <string name="enter_singers_name_here">Enter singers\' name here</string>
    <string name="song_title">Song Title</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show list</string>
    <string name="song_id">Song ID</string>
    <string name="update">Update</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">Delete</string>
    <string name="_4">4</string>
    <string name="show_all_songs_with_5_stars">SHOW ALL SONGS WITH 5 STARS</string>
    <string name="back">BACK</string>
    <string name="_2023">2023</string>
</resources>